Fix steps can not to center on mobile

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,6 +1,5 @@
 // Bootstrap Steps Variables
 
-$steps-scroll-mobile-breakpoint: sm;
 $step-gutter: 1rem;
 $step-content-width: 5rem;
 $step-circle-size: 1.5rem;
